--- a/Olm.Web/Views/Account/Login.cshtml
+++ b/Olm.Web/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
     </section>
     <section class="login-content">
         <div class="logo">
-            <h1>SimpleGuys</h1>
+            <h1>Lionsstory</h1>
         </div>
         <div class="login-box">
             <form class="login-form" asp-controller="Account" asp-action="Authentication" method="post">
